[gd_scene load_steps=4 format=3 uid="uid://c5slold0tmf0"]

[ext_resource type="Texture2D" uid="uid://sfcldt8ok1sc" path="res://Textures/SpaceShooter_Assets/enemyUFO.png" id="1_3hkh5"]
[ext_resource type="Script" path="res://MainScenes/enemy.gd" id="1_ol44g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_did3o"]
radius = 35.0571

[node name="Enemy" type="Area2D" groups=["damageable"]]
script = ExtResource("1_ol44g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3hkh5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_did3o")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.999996, 4.76837e-06)
scale = Vector2(4.8, 4.7)

[node name="FirePositions" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
